plugins {
    id 'java'
}

group = 'stock.global.core'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
}

test {
    useJUnitPlatform()
}